2008-06-17  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Store divider characters for
	unknown-spec list.  For known key symbols, intern using correct
	symbol name.

2008-06-17  Kenichi Handa  <handa@m17n.org>

	* xfaces.c (realize_default_face): If the frame is not on window
	system, set the fontset of face to nil.

2008-06-17  Naohiro Aota  <nao.aota@gmail.com>  (tiny change)

	* fontset.c (fontset_pattern_regexp): Escape some reg-expr
	characters.

2008-06-16  Juanma Barranquero  <lekktu@gmail.com>

	* dispextern.h (lookup_non_ascii_face, split_font_name_into_vector)
	(build_font_name_from_vector): Delete externs.

	* xfaces.c (struct font_name): Don't declare.

2008-06-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font.c (font_unparse_gtkname): Use EQ to compare Lisp_Objects.

2008-06-16  Chong Yidong  <cyd@stupidchicken.com>

	* font.c (font_parse_fcname): Fix handling of unknown-spec string.

2008-06-16  Juanma Barranquero  <lekktu@gmail.com>

	* font.c (Ffont_spec): Fix usage in docstring.
	(Ffont_face_attributes): Doc fix.

2008-06-16  Andreas Schwab  <schwab@suse.de>

	* font.c (Ffont_face_attributes): Fix definition.

2008-06-16  Jason Rumney  <jasonr@gnu.org>

	* font.h (font_style_symbolic_from_value): Remove.

	* font.c (font_style_symbolic_from_value): Remove.
	(font_style_symbolic): Revert to pre 2008-06-13 version.

	* w32font.c (w32_to_fc_weight): New function.
	(w32font_full_name, logfont_to_fcname): Use it.

2008-06-16  Kenichi Handa  <handa@m17n.org>

	* font.c (font_check_object): Delete it.
	(font_clear_cache): Check if a font-object is alive.
	(font_open_entity): Likewise.  Set FONT_OBJLST_INDEX of a
	font-object to nil.
	(font_close_object): Don't check FONT_CLOSE_OBJECT.
	(font_at): Don't call font_check_object.
	(Ffont_get): Return a symbol for :weight, :slant, and :width.

2008-06-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* puresize.h (BASE_PURESIZE): Increase to 1230000.
